Fix overflow issue

--- a/website/css/slider.css
+++ b/website/css/slider.css
@@ -2,9 +2,9 @@
     position: relative;
     background: #e2e2e2;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
-    width: 100%;
     height: auto;
     border-bottom: 2px solid #c90000;
+    overflow-x: hidden;
 }
 
 .slider img {
@@ -25,10 +25,13 @@
     max-height: 100%;
     font-size: 1.2vw;
     opacity: .8;
+    transition: opacity .2s ease-in-out;
+    -moz-transition: opacity .2s ease-in-out;
+    -webkit-transition: opacity .2s ease-in-out;
 }
 
 .slider .slider-text.fade-out {
-    opacity: .6;
+    opacity: .4;
     transition: opacity .2s ease-in-out;
     -moz-transition: opacity .2s ease-in-out;
     -webkit-transition: opacity .2s ease-in-out;
